--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,11 +79,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Cairo
+      fonts:
+        - asset: assets/fonts/Cairo/Cairo-VariableFont_slnt,wght.ttf
+        - asset: assets/fonts/Cairo/static/Cairo-Black.ttf
+        - asset: assets/fonts/Cairo/static/Cairo-Bold.ttf
+        - asset: assets/fonts/Cairo/static/Cairo-ExtraBold.ttf
+        - asset: assets/fonts/Cairo/static/Cairo-ExtraLight.ttf
+        - asset: assets/fonts/Cairo/static/Cairo-Light.ttf
+        - asset: assets/fonts/Cairo/static/Cairo-Medium.ttf
+        - asset: assets/fonts/Cairo/static/Cairo-Regular.ttf
+        - asset: assets/fonts/Cairo/static/Cairo-SemiBold.ttf
+
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
